@@ -6,6 +6,7 @@ import br.dev.ricardocampos.silentguardapi.template.MailgunTemplate;
 import br.dev.ricardocampos.silentguardapi.template.MailgunTemplateCheckIn;
 import br.dev.ricardocampos.silentguardapi.template.MailgunTemplateHtml;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
@@ -60,17 +61,9 @@ public class MailgunEmailService {
 
     MailgunTemplateCheckIn checkInTemplate = new MailgunTemplateCheckIn();
     checkInTemplate.setCheckInLink(String.format(link, confirmationId));
-    if (recipients.size() > 1) {
-      // skip the first one
-      StringBuilder sb = new StringBuilder();
-      for (int i = 1; i < recipients.size(); i++) {
-        if (!sb.isEmpty()) {
-          sb.append(",");
-        }
-        sb.append(recipients.get(i));
-      }
-
-      checkInTemplate.setCarbonCopy(sb.toString());
+    List<String> recipientsCarbonCopy = getRecipientsCarbonCopy(recipients);
+    if (!recipientsCarbonCopy.isEmpty()) {
+      checkInTemplate.setCarbonCopy(String.join(",", recipientsCarbonCopy));
     }
 
     boolean sent = sendEmail(to, subject, checkInTemplate);
@@ -91,21 +84,13 @@ public class MailgunEmailService {
 
     MailgunTemplateHtml htmlTemplate = new MailgunTemplateHtml();
     htmlTemplate.setHtmlCode(htmlContent);
-    if (recipients.size() > 1) {
-      // skip the first one
-      StringBuilder sb = new StringBuilder();
-      for (int i = 1; i < recipients.size(); i++) {
-        if (!sb.isEmpty()) {
-          sb.append(",");
-        }
-        sb.append(recipients.get(i));
-      }
-
-      htmlTemplate.setCarbonCopy(sb.toString());
+    List<String> recipientsCarbonCopy = getRecipientsCarbonCopy(recipients);
+    if (!recipientsCarbonCopy.isEmpty()) {
+      htmlTemplate.setCarbonCopy(String.join(",", recipientsCarbonCopy));
     }
 
     boolean sent = sendEmail(to, subject, htmlTemplate);
-    log.info("Check-in message sent successfully: {}", sent);
+    log.info("Content message sent successfully: {}", sent);
   }
 
   /**
@@ -113,8 +98,7 @@ public class MailgunEmailService {
    *
    * @param to The target email address.
    * @param subject The message subject.
-   * @param textBody The message text body to be displayed.
-   * @param htmlBody The message html body to be rendered.
+   * @param template The {@link MailgunTemplate} instance
    */
   private boolean sendEmail(String to, String subject, MailgunTemplate template) {
     String url = "https://api.mailgun.net/v3/" + appConfig.getMailgunDomain() + "/messages";
@@ -125,7 +109,7 @@ public class MailgunEmailService {
 
     HttpHeaders headers = new HttpHeaders();
     headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-    headers.set(HttpHeaders.AUTHORIZATION, basicAuth("api", appConfig.getMailgunApiKey()));
+    headers.set(HttpHeaders.AUTHORIZATION, basicAuth(appConfig.getMailgunApiKey()));
 
     MultiValueMap<String, String> mailData = new LinkedMultiValueMap<>();
     mailData.add("from", from);
@@ -133,8 +117,9 @@ public class MailgunEmailService {
     if (template.getCarbonCopy().isPresent()) {
       mailData.add("cc", template.getCarbonCopy().get());
     }
+    boolean isTemplateHtml = template.isHtml() && template.getHtmlCode().isPresent();
     mailData.add("subject", subject);
-    if (!template.isHtml()) {
+    if (!isTemplateHtml) {
       mailData.add("template", template.getName());
       if (!template.getVariables().isEmpty()) {
         mailData.add("h:X-Mailgun-Variables", template.getVariableValuesJson());
@@ -144,7 +129,7 @@ public class MailgunEmailService {
     }
 
     for (Map.Entry<String, List<String>> entry : mailData.entrySet()) {
-      String message = String.format("%s: %s", entry.getKey(), entry.getValue().get(0));
+      String message = String.format("%s: %s", entry.getKey(), entry.getValue().getFirst());
       log.debug(message);
     }
 
@@ -165,8 +150,8 @@ public class MailgunEmailService {
     return false;
   }
 
-  private String basicAuth(String username, String password) {
-    String auth = username + ":" + password;
+  private String basicAuth(String password) {
+    String auth = "api" + ":" + password;
     return "Basic " + Base64.getEncoder().encodeToString(auth.getBytes(StandardCharsets.UTF_8));
   }
 
@@ -176,5 +161,19 @@ public class MailgunEmailService {
       return "http://localhost:5173";
     }
     return String.format("https://%s%s", "silentguard.", appConfig.getMailgunDomain() + "/");
+  }
+
+  private List<String> getRecipientsCarbonCopy(List<String> recipients) {
+    if (recipients.size() == 1) {
+      return List.of();
+    }
+
+    // skip the first one
+    List<String> carbonCopyList = new ArrayList<>();
+    for (int i = 1; i < recipients.size(); i++) {
+      carbonCopyList.add(recipients.get(i));
+    }
+
+    return carbonCopyList;
   }
 }
